--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,11 +12,31 @@
       referrerpolicy="no-referrer"
     />
     <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">      
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="/css/navbar.css" />
     <title>Document</title>
   </head>
   <body>
-    <%- include('partials/navbar') %> 
+    <%- include('partials/navbar') %>
+    <div class="container2">
+      <div class="card2">
+        <img src="img/index1.jpg" alt="" />
+        <div class="text2">
+          <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, ratione.</span>
+        </div>
+      </div>
+        <div class="card2">
+          <img class="foto2"src="img/index2.jpg" alt="" />
+        <div class="text2">
+          <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, ratione.</span>
+        </div>
+        </div>
+      
+    </div>
   </body>
 </html>
