--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,1 +1,53 @@
+body{
+    background-image: url('../img/Apple-TV.webp');
+}
+.container2{
+   display:flex;
+    width: 100%;
+    height:100vh;
+    justify-content: space-between;
+}
+.card2{
+    display:flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-left: 10px;
+    margin-right: 10px;
+    transition: all .5s ease-in-out;
+   
 
+}
+.text2{
+    display:flex;
+    background-color: rgba(255, 255, 255, 0.21);
+    width:350px;
+    height:100px;
+    color:white;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    text-align: center;
+}
+img{
+    width:350px;
+    height:250px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    
+
+
+}
+.foto2{
+    width:350px;
+    height:250px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+img:hover{
+    box-shadow: rgb(35, 33, 33) 0px 54px 55px, rgb(255, 255, 255) 0px -12px 30px, rgba(252, 249, 249, 0.971) 0px 4px 6px, rgb(255, 252, 252) 0px 12px 13px, rgba(255, 254, 254, 0.857) 0px -3px 5px;
+}
+.card2:hover{
+   
+        transform: scale(1.1);
+        margin-left: 20px;
+    
+}
