--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,13 +25,13 @@
     <%- include('partials/navbar') %>
     <div class="container2">
       <div class="card2">
-        <img src="img/index1.jpg" alt="" />
+        <img src="img/index6.png" alt="" />
         <div class="text2">
           <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, ratione.</span>
         </div>
       </div>
         <div class="card2">
-          <img class="foto2"src="img/index2.jpg" alt="" />
+          <img class="foto2"src="img/5s.png"alt="" />
         <div class="text2">
           <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, ratione.</span>
         </div>
