--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,7 +1,7 @@
 .body2{
     margin:0;
     padding: 0;
-    background-color:rgb(155, 91, 13);
+    background-color:rgba(141, 140, 140, 0.295);
 }
 .urunler{
     display:flex;
@@ -19,10 +19,11 @@
     flex-direction: column;
     width: 200px;
     height: 200px;
-    margin-right: 10px;
+    margin-right: 20px;
     margin-bottom: 40px;
     border-radius: 10px;
     transition: all .5s ease-in-out;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 
     
     
@@ -48,7 +49,7 @@
     width: 200px;
     color:white;
     justify-content: center;
-    background-color:blue;
+    background-color:rgba(10, 10, 191, 0.561);
     border-bottom-left-radius:10px ;
     border-bottom-right-radius:10px ;
 
