--- a/public/css/details.css
+++ b/public/css/details.css
@@ -1,7 +1,45 @@
-.body2{
+body{
     margin:0;
     padding:0;
+    background-color:rgba(141, 140, 140, 0.295);
+
 }
+
+.navbar{
+    display: flex;
+   font-size:20px;
+   list-style-type:none;
+    height:80px;
+    background-color:rgb(255, 255, 255);
+    width:100%;
+    color: black;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+}
+.linkler{
+    display: flex;
+    text-decoration: none;
+    width: 100%;
+    align-items:center;
+    flex-direction: column;
+    color: black;
+    font-size: 15px;
+    font-family:Arial, Helvetica, sans-serif
+    
+    
+}
+button{
+    width:150px;
+    margin-top: 10px;
+    margin-bottom: 5px;
+    border-radius: 20px;
+    background-color:rgba(232, 231, 230, 0.607);
+}
+.fa-brands{
+    display: inline;
+    margin-top: 10px;
+    font-size: 50px;
+}
+
 
 .container{
     display:flex;
@@ -10,23 +48,22 @@
     width:100%;
     height:100vh;
 }
-.card2{
+.card{
     display:flex;
     flex-direction: column;
     width: 100%;
     height: 100vh;
     margin-right: auto;
     align-items: center;
-    background-color: chocolate;
     justify-content:center;
-
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 
     
     
 }
 .foto{
-    width: 200px;
-    height: 200px;
+    width: 300px;
+    height: 300px;
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
     
@@ -36,9 +73,9 @@
     display:flex;
     flex-direction: column;
     align-items: center;
-    width: 200px;
-    height: 200px;
-    background-color: rgb(48, 30, 210);
+    width: 300px;
+    height:200px;
+    background-color: rgba(48, 30, 210, 0.217);
     border-bottom-left-radius:10px ;
     border-bottom-right-radius:10px ;
 
