--- a/views/urunDetails.ejs
+++ b/views/urunDetails.ejs
@@ -5,14 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/details.css" />
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
   </head>
   <body>
+    <div class="navbar">
+      <div class="icon"><i class="fa-brands fa-apple"></i></div>
+      <div class="linkler">
+        <button><a  class="linkler" href="/">Ana Sayfa</a></button>
+        <button><a class="linkler" href="/products">Ürünler</a></button>
+      
+      </div>
+        
+      
+    
+    </div>
     
     <div class="container">
       <div class="card">
-        <img src="<%= urun.img %> " alt="" />
+        <img class="foto"src="<%= urun.img %> " alt="" />
         <div class="text">
           <h1><%= urun.name %></h1>
           <p class="price">Fiyat : <%= urun.price %></p>
